--- a/site/en/install/_toc.yaml
+++ b/site/en/install/_toc.yaml
@@ -21,6 +21,10 @@ toc:
 - heading: Language bindings
 - title: Java
   path: /install/lang_java
+  status: experimental
+- title: Java (legacy)
+  status: deprecated
+  path: /install/lang_java_legacy
 - title: C
   path: /install/lang_c
 - title: Go
